# ESCatastroLib

./: CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: github_publish.yml
ESCatastroLib/: __init__.py
ESCatastroLib/models/: Calle.py  InfoCatastral.py
ESCatastroLib/utils/: statics.py  utils.py
src/escatastrolib/: __about__.py
src/escatastrolib/models/: Calle.py  InfoCatastral.py  Municipio.py
src/escatastrolib/utils/: __init__.py  converters.py  statics.py  utils.py
tests/: test_calle.py  test_import.py  test_info_catastral.py  test_municipio.py  test_utils.py
